# django-vertical-multi-columns

./: .coverage  .coveragerc  .gitignore  .gitigore  .pre-commit-config.yaml  .yamllint  CODE_OF_CONDUCT.md  CONTRIBUTORS.txt  LICENSE  MANIFEST.in  README.md  README.rst  boot_django.py  check_pypi_version.py  load_tests.py  oldtox.ini  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: black.yml  build-test.yml  build_wheel.yml  build_wheel_and_publish.yml  check-pypi-version.yml  check_pypi_version.py  ci.yml  lint-test-publish.yml  lint-test.yml  manual_lint.yml  publish.yml  staging-lint-test-publish.yml  swtest.yml  test.yml  tox.yml
django_vertical_multi_columns.egg-info/: PKG-INFO  SOURCES.txt
docs/source/: conf.py  index.rst
docs/source/guide/: about.rst  example.rst  install.rst  usage.rst
example-site/: settings.py  simulate.py  urls.py  views.py
example-site/templates/: about.html  base.html  criterialist.html  definedlist.html  evenlist.html  standard_django.html
example_site/: manage.py  settings.py  simulate.py  urls.py  views.py
example_site/example_site/: settings.py  simulate.py  urls.py  views.py
example_site/example_site/templates/: about.html  base.html  criterialistcomplexjson.html  criterialistsimplejson.html  definedlist.html  evenlistcomplexjson.html  standard_django.html
example_site/templates/: about.html  base.html  criterialist.html  criterialistcomplex.html  criterialistsimple.html  definedlist.html  evenlist.html  evenlistcomplex.html  evenlistsimple.html  evenlistsimplejson.html
exercise_vmc/: .env.devpyc  manage.py  readme.rst  requirements.txt
exercise_vmc/exercise_vmc/: asgi.py  settings.py  urls.py  views.py  views.pyCopy  wsgi.py
exercise_vmc/exercise_vmc/templates/: base.html  criterialist.html  definedlist.html  evenlist.html
susan-other/: djangoshell.py
tests/: conftest.py  test_common.py  test_criteria.py  test_defined.py  test_even.py  test_examplesite.py  test_experiment.py
vertical_multi_columns/: .coverage  __init__.py  apps.py  configure.py  pytest.ini  settings.py  views.py
vertical_multi_columns/templates/: sample.html
vertical_multi_columns/tests/: .coverage  SUSANtest_settings.py  conftest.py  test_common.py  test_criteria.py  test_defined.py  test_even.py  test_settings.py  test_settings.saved
vertical_multi_columns/tests/testapp/: apps.py
vmcdemo/: manage.py  settings.py  views.py
vmcdemo/templates/: home.html
vmcdemo/vmcdemo/: settings.py  urls.py  views.py
vmcdemo/vmcdemo/templates/: base.html  criterialist.html  definedlist.html
