# setup.cfg
[metadata]
name = django-vertical-multi-columns
version = 0.0.2
description = Generate content for rendering in Django templates in multiple columns that are sorted vertically
long_description = file:README.rst
url = https://github.com/swright573/django-vertical-multi-columns
license = BSD
classifiers =
	Development Status :: 4 - Beta
	Environment :: Web Environment
	Intended Audience :: Developers
	License :: OSI Approved :: BSD License
	Operating System :: OS Independent
	Programming Language :: Python :: 3 :: Only
	Topic :: Software Development :: Libraries :: Application Frameworks
	
[options]
packages=["vertical-multi-columns"]
include_package_data = true
python_requires = >=3.7
setup_requires = setuptools >= 38.3.0
install_requires = Django>=2.2
test_suite = load_tests.get_suite   # needs to be pytest