# setup.cfg
[metadata]
name = django-vertical-multi-columns
version = 0.0.10
description = Generate content for rendering in Django templates in multiple vertically-sorted side-by-side columns
long_description = file:README.rst
url = https://github.com/swright573/django-vertical-multi-columns
license = BSD
classifiers =
	Development Status :: 4 - Beta
	Environment :: Web Environment
	Intended Audience :: Developers
	License :: OSI Approved :: BSD License
	Operating System :: OS Independent
	Programming Language :: Python :: 3 :: Only
	Topic :: Software Development :: Libraries :: Application Frameworks

[options]
packages=vertical_multi_columns
include_package_data = true
python_requires = >=3.7
setup_requires = setuptools >= 40.6.0

[flake8]
max-line-length = 127
exclude =
	.*, _*.*, **_.*, docs, build, dist, susan_other, venv
