# setup.cfg
[metadata]
name = django-vertical-multi-columns
version = attr: vertical_multi_columns.__version__
author = 'Susan Wright'
author_email = 'lsusanwright573@gmail.com'
description = Generate content for rendering in Django templates in multiple vertically-sorted side-by-side columns
long_description = file:README.rst
long_description_content_type = 'text/x-rst'
url = 'https://github.com/swright573/django-vertical-multi-columns'
project_urls = {'Documentation': 'https://django-vertical-multi-columns.readthedocs.io/en/latest/index.html',}
keywords='django columns multiple vertical sorted'
license = BSD
classifiers =
	Development Status :: 4 - Beta
	Environment :: Web Environment
	Intended Audience :: Developers
	License :: OSI Approved :: BSD License
	Operating System :: OS Independent
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Topic :: Software Development :: Libraries :: Application Frameworks

[options]
packages=vertical_multi_columns
include_package_data = true
python_requires = >=3.7
setup_requires = setuptools >= 40.6.0

[flake8]
max-line-length = 127
exclude =
	.*, _*.*, **_.*, docs, build, dist, susan_other, venv, conf.py
